network/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
  annotations:
    cloud.google.com/l4-rbs: "enabled"
    cloud.google.com/neg: '{"ingress":true,"exposed_ports":{"15021":{},"443":{},"80":{}}}'
    networking.gke.io/load-balancer-ip-addresses: prod-app-runtime-gateway
    cloud.google.com/backend-config: '{"default": "istio-ingressgateway"}'
spec:
  ports:
    # status-port exposes a /healthz/ready endpoint that can be used with GKE Ingress health checks
  - name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021
    # Any ports exposed in Gateway resources should be exposed here.
  - name: http2
    port: 80
  - name: https
    port: 443
  selector:
    istio: ingressgateway
    app: istio-ingressgateway
  type: LoadBalancer
